# evergale_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
evergale_bot/: __init__.py  evergale_bot.py
evergale_bot/src/: __init__.py  audio_bridge.py  audio_bridge_ffmpeg.py  boss.py  config.py  logger.py  relay.py  roster.py  utility.py  utils.py
tests/: test_config.py  test_raid_parser.py  test_utility.py
