[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evergale_bot"
version = "1.0.0"
description = "Evergale moderator bot"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "KrapFey" }
]
keywords = [
    "Python",
    "Discord",
    "Bot",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "discord-py>=2.7.1",
    "python-dotenv>=1.2.2"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.2",
    "pre-commit>=4.5.1",
]
all = [
    "evergale_bot[dev]"
]

[project.scripts]
evergale_bot = "evergale_bot:main"

[project.urls]
Repository = "https://github.com/KrapFey/evergale_bot"

[tool.setuptools]
package-dir = { "" = "evergale_bot" }

[tool.setuptools.packages.find]
where = ["evergale_bot"]
include = ["*"]
namespaces = false

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "D",    # pydocstyle
    "F",    # pyflakes
    "UP",   # pyupgrade
    "N",    # PEP8-naming
    "I",    # isort
    "A",    # flake8-builtins
    "G",    # flake8-logging-format
    "Q",    # flake8-quotes
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "PTH",  # flake8-use-pathlib
    "SLF",  # flake8-self
    "ARG",  # flake8-unused-arguments
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import conventions
    "COM",  # flake8-commas
    "RSE",  # flake8-raise
    "INT",  # flake8-gettext
    "NPY",  # NumPy-specific rules
]
ignore = [
    "G004", # Logging statement uses f-string
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["utils"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"
